# color-palette-wasm

./: Cargo.toml  LICENCE.txt  README.md
src/: color.rs  lib.rs  palette.rs  test.rs
