[package]
name = "color-palette-wasm"
version = "0.1.0"
authors = ["Victor Guichard <guichardvictor@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dev-dependencies]
image = "0.24.5"
